# libero_env_test

./: .gitignore  .pre-commit-config.yaml  .yamlfmt.yaml  CONTRIBUTING.md  LICENSE  MUJOCO_LOG.TXT  README.md  pyproject.toml  ruff.toml
.github/: runs-on.yml
.github/workflows/: build-and-upload.yml
config/: README.md  libero_lcm_scenario.yaml
reference/carbonsix_drake_sim/: __main__.py
reference/carbonsix_drake_sim/hardware_station/: controllers.py  lcm_robot.py  station.py
reference/carbonsix_drake_sim/scripts/: directive_visualizer.py  model_visualizer.py  simulation.py
reference/carbonsix_drake_sim/visualization/: server.py  sigma_hand_visualizer.py
scripts/: README.md
src/carbonsix_python_template/: __init__.py
src/libero_lcm/: __init__.py  __main__.py
src/libero_lcm/core/: __init__.py  __main__.py  control_client.py  env_server.py  scenario.py  visualizer.py
tests/: README.md
